--- a/bookingApp/templates/base.html
+++ b/bookingApp/templates/base.html
@@ -39,8 +39,7 @@
 				</div>
 			</div>
 		</div>
-    {% else %}{% endif%}
-    {% endfor %}
+    
 	  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
 	      <a class="navbar-brand" href="{% url 'bookingUrls:indexPage' pk %}">Counselor</a>
@@ -61,7 +60,32 @@
 	    </div>
 	  </nav>
     <!-- END nav -->
- 
+ {% else %}{% endif%}
+    {% endfor %}
+
+{% for counsellor in counsellors %}
+{% if pk == counsellor.user_id %}
+
+	  <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
+	    <div class="container">
+	      <a class="navbar-brand" href="{% url 'bookingUrls:indexPage' pk %}">Counselor</a>
+	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
+	        <span class="oi oi-menu"></span> Menu
+	      </button>
+
+	      <div class="collapse navbar-collapse" id="ftco-nav">
+	        <ul class="navbar-nav ml-auto">
+          <li class="nav-item"><a href="{% url 'bookingUrls:indexPage' pk %}" class="nav-link">Home</a></li>
+          
+          <li class="nav-item"><a href="{% url 'bookingUrls:contactPage'%}" class="nav-link">Contact</a></li>
+	        </ul>
+	      </div>
+	    </div>
+	  </nav>
+    <!-- END nav -->
+{% else %}{% endif%}
+    {% endfor %}
+
 {% block content %}
 
 
