--- a/bookingApp/templates/book.html
+++ b/bookingApp/templates/book.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}{% load static %}
 {% block content %}
-
+<div class="container">
 <p>Book recorded successfully</p>
+</div>
 {% endblock %}
