--- a/bookingApp/templates/book.html
+++ b/bookingApp/templates/book.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}{% load static %}
 {% block content %}
-<div class="container">
-<p>Book recorded successfully</p>
+<div class="container" style="padding:30%;">
+    <div class = "background:bg-success">
+<p >Book recorded successfully</p>
+</div>
 </div>
 {% endblock %}
