--- a/bookingApp/templates/details.html
+++ b/bookingApp/templates/details.html
@@ -42,11 +42,11 @@
 								<div class="faded" >
 									<p>{{object.occupation}}</p>			
 	              </div>
-				  <div class="row">
+				  {% comment %} <div class="row">
 					  <div class ="col-sm-6" style="border-right:1px solid rgba(0,0,0,0.3)">
 						<p>About:<p>
 						<p>{{object.about}}</p>  
-					  </div>
+					  </div> {% endcomment %}
 					  {% else%}
 					{% endif %}
 					{% endfor %}
