--- a/bookingApp/templates/sent.html
+++ b/bookingApp/templates/sent.html
@@ -2,9 +2,10 @@
 
 
 {% block content %}
-<div class = "fade-in-image" style = "width:100%;padding-left:25%;padding-right:10%">     
-<div class = "col-sm-4">
-    <p>Email Sent</p>
+<div class = "fade-in-image" style = "width:100%;padding:20%;padding-left:35%;padding-right:10%">     
+<div class = "col-sm-8">
+    <p class = "alert alert-danger" style="width:75%" >
+        Email Sent. Click to get back to site </p>
 </div>
 </div>
 {% endblock %}
