--- a/bookingApp/templates/contact.html
+++ b/bookingApp/templates/contact.html
@@ -87,7 +87,7 @@
 												<div class="col-md-12">
 													<div class="form-group">
 														<label class="label" for="#">Message</label>
-														<textarea name="message" class="form-control" id="msg" cols="30" rows="4" placeholder="Message"></textarea>
+														<textarea name="msg" class="form-control" id="msg" cols="30" rows="4" placeholder="Message"></textarea>
 													</div>
 												</div>
 												<div class="col-md-12">
