--- a/bookingApp/templates/index.html
+++ b/bookingApp/templates/index.html
@@ -359,22 +359,20 @@
 			    					<div class="form-field">
 	          					<div class="select-wrap">
 	                      <div class="icon"><span class="fa fa-chevron-down"></span></div>
-	                      <select name="" id="" class="form-control" name="subject">
-	                      	<option value="">Preventive Counselling</option>
-	                        <option value="">Academic Counselling</option>
-	                        <option value="">Vocational / Career Counselling</option>
-	                        <option value="">Relationship Counselling</option>
-	                        <option value="">Grief Counselling</option>
-	                        <option value="">Behavioral Counselling</option>
-	                        <option value="">Psychometric Assessment</option>
-	                    	<option value="">Family Therapy</option>
-	                        <option value="">Assessment and Management of learning disorders</option>
-	                        <option value="">Assessment and Management of Obsessive - Compulsive Disorders</option>
-	                        <option value="">Stress Management </option>
-	                        <option value="">Treatment and management of depression, anxiety </option>
-	                        <option value="">Psycho-therapy </option>
-
-						
+	                      <select  id="" class="form-control" name="subject">
+	                      	<option value="Preventive Counselling">Preventive Counselling</option>
+	                        <option value="Academic Counselling">Academic Counselling</option>
+	                        <option value="Vocational / Career Counselling">Vocational / Career Counselling</option>
+	                        <option value="Relationship Counselling">Relationship Counselling</option>
+	                        <option value="Grief Counselling">Grief Counselling</option>
+	                        <option value="Behavioral Counselling">Behavioral Counselling</option>
+	                        <option value="Psychometric Assessment">Psychometric Assessment</option>
+	                    	<option value="Family Therapy">Family Therapy</option>
+	                        <option value="Assessment and Management of learning disorders">Assessment and Management of learning disorders</option>
+	                        <option value="Assessment and Management of Obsessive - Compulsive Disorders">Assessment and Management of Obsessive - Compulsive Disorders</option>
+	                        <option value="Stress Management">Stress Management </option>
+	                        <option value="Treatment and management of depression, anxiety">Treatment and management of depression, anxiety </option>
+	                        <option value="Psycho-therapy">Psycho-therapy </option>				
 						
 						</select>
 	                    </div>
@@ -383,7 +381,7 @@
 								</div>
 								<div class="col-md-12">
 									<div class="form-group">
-			              <textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Message" name="msg"></textarea>
+			              <textarea  id="" cols="30" rows="7" class="form-control" placeholder="Message" name="msg"></textarea>
 			            </div>
 								</div>
 								<div class="col-md-12">
