--- a/bookingApp/templates/sent.html
+++ b/bookingApp/templates/sent.html
@@ -4,8 +4,10 @@
 {% block content %}
 <div class = "fade-in-image" style = "width:100%;padding:20%;padding-left:35%;padding-right:10%">     
 <div class = "col-sm-8">
+    <a href = "{% url 'bookingUrls:indexPage' pk %}">
     <p class = "alert alert-danger" style="width:75%" >
         Email Sent. Click to get back to site </p>
+    </a>
 </div>
 </div>
 {% endblock %}
