--- a/counsellingApp/templates/app/login.html
+++ b/counsellingApp/templates/app/login.html
@@ -2,7 +2,7 @@
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
+<meta name="viewport" content="width=device-width">
 <title>Login</title
 ><!------>
 <!------>
@@ -52,14 +52,11 @@ h2 {
 }
 
 #formContent {
-  -webkit-border-radius: 10px 10px 10px 10px;
   border-radius: 10px 10px 10px 10px;
   background: #fff;
   padding: 30px;
-  width: 100%;
   max-width: 450px;
   position: relative;
-  padding: 0px;
   -webkit-box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
   box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
   text-align: center;
@@ -278,9 +275,6 @@ select:placeholder {
   width:40%;
 }
 
-
-
-
 </style>
 
 
@@ -335,6 +329,7 @@ select:placeholder {
 
   </div>
 </div>
+
 
 
 
