--- a/bookingApp/templates/contact.html
+++ b/bookingApp/templates/contact.html
@@ -54,7 +54,7 @@
 				        			<span class="fa fa-globe"></span>
 				        		</div>
 				        		<div class="text">
-					            <p><span>Website</span> <a href="#">yoursite.com</a></p>
+					            <p><span>Website</span> <a href="https://ugcounsellingapp.herokuapp.com/">UGCounselling.com</a></p>
 					          </div>
 				          </div>
 								</div>
