--- a/bookingApp/templates/base.html
+++ b/bookingApp/templates/base.html
@@ -50,11 +50,10 @@
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
           <li class="nav-item"><a href="{% url 'bookingUrls:indexPage' pk %}" class="nav-link">Home</a></li>
-          {% comment %} <li class="nav-item"><a href="{% url 'bookingUrls:aboutPage'%}" class="nav-link">About</a></li> {% endcomment %}
           <li class="nav-item"><a href="{% url 'bookingUrls:counselorPage'%}" class="nav-link">Counselors</a></li>
-          {% comment %} <li class="nav-item"><a href="{% url 'bookingUrls:servicesPage'%}" class="nav-link">Services</a></li> {% endcomment %}
-          {% comment %} <li class="nav-item"><a href="{% url 'bookingUrls:blogPage'%}" class="nav-link">Blog</a></li> {% endcomment %}
           <li class="nav-item"><a href="{% url 'bookingUrls:contactPage'%}" class="nav-link">Contact</a></li>
+          <li class="nav-item"><a href="{% url 'bookingUrls:bookings' pk %}" class="nav-link">My Bookings</a></li>
+
 	        </ul>
 	      </div>
 	    </div>
@@ -76,7 +75,6 @@
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
           <li class="nav-item"><a href="{% url 'bookingUrls:indexPage' pk %}" class="nav-link">Home</a></li>
-          
           <li class="nav-item"><a href="{% url 'bookingUrls:contactPage'%}" class="nav-link">Contact</a></li>
 	        </ul>
 	      </div>
