--- a/bookingApp/templates/details.html
+++ b/bookingApp/templates/details.html
@@ -59,19 +59,25 @@
 						{% for available in availables %}
 						
 						{% if counselor|divisibleby:available.user_id %}
+						<div style="border:solid 1px rgba(0,0,0,0.1);">
 				 <p style = "color:orange">{{available.day}}<p>
 					{% with available.availabletime|split:"," as times %}
 					 {% for time in times %}
 					{% with time|remove_substr:"[" as tim %}
                 {% with tim|remove_substr:"]" as t %}
-				 <p>{{t|remove_substr:"'"}}<p>
+				 <p style="margin:0%;">{{t|remove_substr:"'"}}</p>
+<input type= "radio" name= "radio" value="{{available.day}}_{{t|remove_substr:"'"}}">
+      Book
+      </input>
+	
 					{% endwith %}
 					{% endwith %}
 					 {% endfor %}
 					{% endwith %}
 					{% else %}
-					
 					{% endif %}
+					</div>
+					<br>
                     {% endfor %}
 							  </div>
 					  </div>
