--- a/counsellingApp/templates/app/add.html
+++ b/counsellingApp/templates/app/add.html
@@ -73,34 +73,16 @@
 
             <div class="col-sm-3">
               <div class="form-group">
-                {% comment %}
-                <input
-                  type="text"
-                  class="form-control"
-                  value="{{object.firstName}}"
-                />
-                {% endcomment %} {{counsellor.firstName}}
-                <!---->
-                {% comment %}
-                <input type="text" class="form-control" required />
-                {% endcomment %}
+                 {{counsellor.firstName}}
+               
 
                 <label for="usr">First Name</label>
               </div>
             </div>
             <div class="col-sm-3">
               <div class="form-group">
-                {% comment %}
-                <input
-                  type="text"
-                  class="form-control"
-                  value="{{object.lastName}}"
-                />
-                {% endcomment %} {{counsellor.lastName}}
-                <!---->
-                {% comment %}
-                <input type="text" class="form-control" required />
-                {% endcomment %}
+                 {{counsellor.lastName}}
+                
 
                 <label for="usr">Last Name</label>
               </div>
@@ -115,80 +97,35 @@
 
             <div class="col-sm-4">
               <div class="form-group">
-                {% comment %}
-                <input type="text" class="form-control" required />
-                {% endcomment %} {% comment %}
-                <input
-                  type="text"
-                  class="form-control"
-                  value="{{object.email}}"
-                />
-                {% endcomment %} {{counsellor.email}}
+                 {{counsellor.email}}
                 <label for="usr">Email</label>
               </div>
             </div>
 
             <div class="col-sm-3">
               <div class="form-group">
-                {% comment %}
-                <input
-                  type="text"
-                  class="form-control"
-                  value="{{object.occupation}}"
-                />
-                {% endcomment %} {{counsellor.occupation}}
-                <!---->
-
-                {% comment %}
-                <input type="text" class="form-control" required />
-                {% endcomment %}
-
+                 {{counsellor.occupation}}
+               
                 <label for="usr">Occupation</label>
               </div>
             </div>
 
             <div class="col-sm-3">
               <div class="form-group">
-                {% comment %}
-                <input type="text" class="form-control" required />
-                {% endcomment %} {% comment %}
-                <input
-                  type="text"
-                  class="form-control"
-                  value="{{object.contact}}"
-                />
-                {% endcomment %} {{counsellor.contact}}
+                 {{counsellor.contact}}
                 <label for="usr">Contact</label>
               </div>
             </div>
              <div class="col-sm-3">
               <div class="form-group">
-                {% comment %}
-                <input type="text" class="form-control" required />
-                {% endcomment %} {% comment %}
-                <input
-                  type="text"
-                  class="form-control"
-                  value="{{object.contact}}"
-                />
-                {% endcomment %} {{counsellor.status}}
+                 {{counsellor.status}}
                 <label for="usr">status</label>
               </div>
             </div>
             <div class="col-sm-5" >
               <div class="form-group">
-                {% comment %}
-                <input
-                  type="text"
-                  class="form-control"
-                  value="{{object.firstName}}"
-                />
-                {% endcomment %} {{counsellor.profile }}
-                <!---->
-                {% comment %}
-                <input type="text" class="form-control" required />
-                {% endcomment %}
-
+                 {{counsellor.profile }}
+                
                 <label for="usr">Update Profile Pic</label>
               </div>
             </div>
