--- a/counsellingApp/templates/app/header.html
+++ b/counsellingApp/templates/app/header.html
@@ -1,12 +1,8 @@
 {% load static %}  
-
 <head>
   <title>UG COUNSELLING</title>
   <meta charset="utf-8" />
   <meta charset="utf-8" />
-  {% comment %}
-  <meta http-equiv="refresh" content="3" />
-  {% endcomment %}
   <style>
     {% include 'app/assets/main.css'%}
   </style>
@@ -84,3 +80,6 @@
 
 </head>
 
+{% block content %}
+
+{% endblock %}
