--- a/counsellingApp/templates/app/home.html
+++ b/counsellingApp/templates/app/home.html
@@ -1,9 +1,9 @@
 {% include 'app/header.html' %}
-<!---->{% load static %} {% block body %}
+{% load static %} {% block body %}
 
 <body ng-app="counsellingApp">
   <section id="section1" class="col-sm-2"
-  style = 
+  
   >
     <ul class="bubble-boxes">
       <li></li>
@@ -43,9 +43,9 @@
         </li>
 
         <li>
-          <a href="{% url 'counsellingUrls:indexPage' pk 'home'%}">
-            <span class="icon" style = "color:{{home}}" ><ion-icon name="home-outline"></ion-icon></span>
-            <span class="title">Home</span>
+          <a href="{% url 'counsellingUrls:settingsPage' pk 'settings'%}">
+            <span class="icon" style = "color:{{settings}}" ><ion-icon name="home-outline"></ion-icon></span>
+            <span class="title">Bookings</span>
           </a>
         </li>
 
@@ -59,7 +59,7 @@
         </li>
 
         <li>
-          <a href="{% url 'counsellingUrls:profilePage' pk 'profile'%}">
+          <a href="{% url 'counsellingUrls:dashboardPage' pk 'profile' %}">
             <span class="icon" style = "color:{{profile}}"><ion-icon name="cloud-outline"></ion-icon></span>
             <span class="title">Profile</span>
           </a>
@@ -148,10 +148,7 @@
       <!---->
     </div>
 
-    {% comment %} <br />
-    <br />
-    <br />
-    {% endcomment %}<!---->
+    
 
     <script
       type="module"
@@ -168,116 +165,5 @@
       >
     </div>
   </section>
-
-  <!--section 3-->
-
-  <script>
-    document
-      .getElementById("profilePage")
-      .addEventListener("click", myFunction1);
-    document
-      .getElementById("notificationPage")
-      .addEventListener("click", myFunction2);
-    document.getElementById("indexPage").addEventListener("click", myFunction3);
-    document.getElementById("admin").addEventListener("click", myFunction4);
-    document
-      .getElementById("super_admin")
-      .addEventListener("click", myFunction5);
-
-    function myFunction5() {
-      document.getElementById("section4").style.display = "none";
-      document.getElementById("footer6").style.display = "none";
-
-      document.getElementById("section5").style.display = "none";
-      document.getElementById("section3").style.display = "none";
-      document.getElementById("section6").style.display = "none";
-      document.getElementById("section6container1").style.display = "none";
-      document.getElementById("section6container2").style.display = "none";
-      document.getElementById("section6container3").style.display = "none";
-      document.getElementById("section7").style.display = "block";
-    }
-
-    function myFunction1() {
-      document.getElementById("section4").style.display = "none";
-      document.getElementById("footer6").style.display = "none";
-
-      document.getElementById("section5").style.display = "none";
-      document.getElementById("section3").style.display = "block";
-      document.getElementById("section6").style.display = "none";
-      document.getElementById("section6container1").style.display = "none";
-      document.getElementById("section6container2").style.display = "none";
-      document.getElementById("section6container3").style.display = "none";
-      document.getElementById("section7").style.display = "none";
-    }
-
-    function myFunction2() {
-      document.getElementById("section3").style.display = "none";
-      document.getElementById("section4").style.display = "block";
-      document.getElementById("footer6").style.display = "none";
-
-      document.getElementById("section5").style.display = "none";
-      document.getElementById("section6").style.display = "none";
-      document.getElementById("section6container1").style.display = "none";
-      document.getElementById("section6container2").style.display = "none";
-      document.getElementById("section6container3").style.display = "none";
-      document.getElementById("section7").style.display = "none";
-    }
-
-    function myFunction3() {
-      document.getElementById("section3").style.display = "none";
-      document.getElementById("section4").style.display = "none";
-      document.getElementById("section5").style.display = "block";
-      document.getElementById("footer6").style.display = "none";
-
-      document.getElementById("section6").style.display = "none";
-      document.getElementById("section6container1").style.display = "none";
-      document.getElementById("section6container2").style.display = "none";
-      document.getElementById("section6container3").style.display = "none";
-      document.getElementById("section7").style.display = "none";
-    }
-
-    function myFunction4() {
-      document.getElementById("section3").style.display = "none";
-      document.getElementById("section4").style.display = "none";
-      document.getElementById("section5").style.display = "none";
-      document.getElementById("section6").style.display = "block";
-      document.getElementById("footer6").style.display = "flex";
-      document.getElementById("section6container1").style.display = "block";
-      document.getElementById("section6container2").style.display = "none";
-      document.getElementById("section6container3").style.display = "none";
-      document.getElementById("section7").style.display = "none";
-    }
-  </script>
-
-  <script>
-    // Get all the tabs
-    const tabs = document.querySelectorAll("#elementID");
-
-    tabs.forEach((clickedTab) => {
-      // Add onClick event listener on each tab
-      clickedTab.addEventListener("click", () => {
-        // Remove the active class from all the tabs (this acts as a "hard" reset)
-        tabs.forEach((tab) => {
-          tab.classList.remove("active");
-        });
-
-        // Add the active class on the clicked tab
-        clickedTab.classList.add("active");
-      });
-    });
-  </script>
-
-  <script>
-    function openNav() {
-      document.getElementById("section2").style.width = "410px";
-      document.getElementById("section2").style.display = "block";
-    }
-
-    function closeNav() {
-      document.getElementById("section2").style.width = "0";
-      document.getElementById("section2").style.display = "none";
-    }
-  </script>
-</body>
 
 {% endblock %}
