--- a/counsellingApp/templates/app/login.html
+++ b/counsellingApp/templates/app/login.html
@@ -302,11 +302,9 @@ select:placeholder {
 		<div class="col-lg-10 col-md-12 m-auto">
 			<div class="alert alert-success fade show" role="alert">
 				 
-    {% for message in messages %}
-    <div {% if message.tags %} class="{{ message.tags }}"{% endif %}>
-      {{ message }}
+    <div >
+      WELCOME TO UGCOUNSELLING
       </div>
-    {% endfor %}
 </div>
 </div>
 		</div>
