--- a/bookingApp/templates/bookings.html
+++ b/bookingApp/templates/bookings.html
@@ -4,35 +4,33 @@
           <table id="table" class="table table-bordered table-striped">
             <thead>
               <tr>
-                <th>Student Profile</th>
-                <th>Student ID</th>
-                <th>Student Name</th>
+            
                 <th>Counselor</th>
                  <th>Counselor ID</th>
                 <th>status</th>
                 <th>Day booked For</th>
                 <th>Time booked For</th>
                 <th>Date&timed booked</th>
+                 <th>Delete</th>
+
               </tr>
             </thead>
 
             <tbody>
                 {% for booking in bookings %}
               {% if booking.student_id == pk|add:0 %}
-              <tr>  
-              
-                <td>{{booking.student_id}}</td>
-                <td>{{ booking.student_id }}</td>
-                <td>{{booking.student_name}}</td>
+              <tr>                 
                 <td>{{booking.counsellor}}</td>
                 <td>{{booking.counsellor_user_id}}</td>
                 <td>{{booking.student_status}}</td>
                 <td>{{booking.day}}</td>
                 <td>{{booking.time}}</td>
-                <td>{{booking.date}}</td>
-
-
-                
+                <td>{{booking.date}}</td> 
+                <td>
+                    <center>    
+                    <a href = "{% url 'bookingUrls:delete' booking.id %}" class="btn" style="background:#281564;color:white;">Delete </a>
+                    </center>
+                </td>   
               </tr>
               {% else%}
                 {% endif %}
